tests/ui/parser/suggest-semi-in-array.stderr
error: expected one of `,`, `.`, `;`, `?`, `]`, or an operator, found `2`
  --> $DIR/suggest-semi-in-array.rs:3:5
   |
LL |     let v = [1
   |               - expected one of `,`, `.`, `;`, `?`, `]`, or an operator
LL |     2];
   |     ^ unexpected token

error: aborting due to 1 previous error

